# ai-agent-framework

./: README.md
ai-agent-framework/: API.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  LICENSE  README.md  README_DEV.md  config.py  launch.py  main.py  memory.db  pyproject.toml  requirements.txt
ai-agent-framework/src/ai_agent_framework/: __init__.py  config.py  launch.py  main.py
ai-agent-framework/src/ai_agent_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai-agent-framework/src/ai_agent_framework/core/: __init__.py  agent_core.py  llm_client.py  multi_agent.py  prompt_builder.py  react_loop.py  tool_loop.py
ai-agent-framework/src/ai_agent_framework/memory/: __init__.py  memory_manager.py
ai-agent-framework/src/ai_agent_framework/streaming/: __init__.py  stream_manager.py
ai-agent-framework/src/ai_agent_framework/tools/: __init__.py  base.py  calculator.py  file_read.py  file_write.py  weather.py  web_search.py  wikipedia.py
ai-agent-framework/src/ai_agent_framework/utils/: __init__.py  port_guard.py
ai-agent-framework/src/ai_agent_framework/web/: app.py
ai-agent-framework/src/ai_agent_framework/web/static/css/: style.css
ai-agent-framework/src/ai_agent_framework/web/static/js/: app.js
ai-agent-framework/src/ai_agent_framework/web/templates/: index.html
ai-agent-framework/tests/: test_integration_fc.py  test_memory.py  test_multi_agent.py  test_react_loop.py  test_tools.py
